--- a/seibo_party/style.css
+++ b/seibo_party/style.css
@@ -49,10 +49,11 @@ body, html {
 #square-wrapper:active { cursor: grabbing; }
 .dragging { opacity: 0.5; }
 .image-preview-square {
+    width: 100%;
     max-width: 100%;
     max-height: 100%;
-
     aspect-ratio: 1 / 1;
+    
     position: relative;
     background-color: #fff;
     border-width: 5px;
