--- a/seibo_party/style.css
+++ b/seibo_party/style.css
@@ -46,14 +46,7 @@ body, html {
     flex-grow: 1;
     min-height: 0;
 }
-#square-wrapper {
-    width: 80%;
-    margin-bottom: 10px;
-    cursor: grab;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+#square-wrapper:active { cursor: grabbing; }
 .dragging { opacity: 0.5; }
 .image-preview-square {
     width: 100%;
