--- a/seibo_party/style.css
+++ b/seibo_party/style.css
@@ -35,26 +35,17 @@ body, html {
     font-size: 12px;
     cursor: pointer;
 }
-
 #square-wrapper {
     width: 80%;
     margin-bottom: 10px;
     cursor: grab;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1;
-    min-height: 0;
 }
 #square-wrapper:active { cursor: grabbing; }
 .dragging { opacity: 0.5; }
 .image-preview-square {
-    width: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    aspect-ratio: 1 / 1;
-    
     position: relative;
+    width: 100%;
+    padding-top: 100%;
     background-color: #fff;
     border-width: 5px;
     border-style: solid;
